# map-fusion

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  build_release_data.sh  commands.sh  pyproject.toml  test_release_e2e.sh
.github/workflows/: release.yml
documentation/: release-quickstart.md
examples/: load_release_example.py
graphsets/chicago/: gps.graphml  sat.graphml  truth.graphml
src/: apls.py  caching.py  coordinates.py  coverage.py  curve.py  data_handling.py  deduplicating.py  dependencies.py  examples.py  experiments.py  external.py  frechet.py  gps.py  graph_coordinates.py  graph_coverage.py  graph_curvature.py  graph_deduplicating.py  graph_merging.py  graph_node_extraction.py  graph_simplifying.py  graphs.py  hausdorff.py  internal.py  main.py  maps.py  measurements.py  merging.py  network.py  node_extraction.py  osmnx  pcm.py  rendering.py  satellite.py  simplifying.py  subgraphing.py  unused.py  utilities.py  workflow.py
src/apls/: apls.py  apls_plots.py  apls_utils.py  road_speed.py  sp_metric.py  topo_metric.py
src/data/: __init__.py  gmaps.py  gps.py  osm.py  sat.py  sat2graph.py
src/data/sat2graph/: code.py  common.py  decoder.py  graph_ops.py  lib.py
src/experiments/: __init__.py  advanced_analysis.py  data_preparation.py  series_0.py  series_1.py  series_2.py  series_3.py  utilities.py  visualization.py
src/graph/: __init__.py  coordinates.py  coverage.py  curvature.py  deduplicating.py  edge_cutting.py  merging.py  sanitizing.py  simplifying.py  subgraphing.py
src/graph/utilities/: __init__.py  attributes.py  coordinates.py  distance.py  sanitization.py
src/handlers/: roadster.py  sat2graph.py
src/handlers/gmaps/: LICENSE.txt  Readme.md  lib.py  pyproject.toml
src/map-fusion/: __about__.py  osmnx  rendering.py
src/map-fusion/experiments/: series_3.py  utilities.py  visualization.py
src/map-fusion/graph/utilities/: __init__.py  paths.py
src/map-fusion/spatial_reference_systems/: __init__.py
src/map-fusion/storage/: paths.py
src/map-fusion/types/: common.py
src/map_fusion/: __init__.py  external.py  main.py  workflow.py
src/map_fusion/data/: __init__.py  gps.py  osm.py
src/map_fusion/data/sat2graph/: lib.py
src/map_fusion/experiments/: advanced_analysis.py  data_preparation.py  series_0.py  series_1.py  series_2.py
src/map_fusion/graph/: __init__.py  merging.py  pruning.py  sanitizing.py  subgraphing.py
src/map_fusion/graph/utilities/: attributes.py  distance.py  general.py
src/map_fusion/map_similarity/: apls.py
src/map_fusion/pipeline/: __init__.py  load.py  tar.py
src/map_fusion/pipeline/input/: __init__.py  gps.py
src/map_fusion/spatial_reference_systems/: utm.py
src/map_fusion/storage/: paths.py  serialization.py
src/map_fusion/types/: README.md  __init__.py  gps.py  maps.py  release.py  satellite.py
src/map_similarity/: __init__.py  apls.py  topo.py  topo_utils.py
src/spatial_reference_systems/: utm.py  wm.py
src/storage/: __init__.py
src/topo/: topo_metric.py
