[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geoalg"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jvtubergen", email = "j.vantubergen@students.uu.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "numpy",
  "networkx",
  "osmnx",
  "matplotlib",
  "scikit-learn", 
  "jupyterlab", # jupyterlab
  "ipykernel",  # jupter lab kernel creation
  "frechetdist", # doesn't work?
  "utm", # To convert UTM of mapconstruction.org to lat lon.
  "rtree", # Indexing nodes subgraph extraction by bounding box.
  "pillow", # Image extraction 
  "requests", # gmaps-image dependency for API requests.
  "pyQt6", # Necessary for plotting on your new laptop.
#  "apls @ git+https://github.com/jvtubergen/apls@attempt"
#  "gdal", # Geospatial Data Abstraction Layer
  "opencv-python"
]

[project.urls]
Documentation = "https://github.com/jvtubergen/geoalg#readme"
Issues = "https://github.com/jvtubergen/geoalg/issues"
Source = "https://github.com/jvtubergen/geoalg"

[tool.hatch.version]
path = "src/geoalg/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true # Necessary to directly link to github releases.

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/geoalg tests}"

[tool.coverage.run]
source_pkgs = ["geoalg", "tests"]
branch = true
parallel = true
omit = [
  "src/geoalg/__about__.py",
]

[tool.coverage.paths]
geoalg = ["src/geoalg"]
tests = ["tests", "*/geoalg/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
