[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "map_fusion"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "jvtubergen", email = "j.vantubergen@students.uu.nl" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  # Core Numerical & Scientific Computing
  "numpy>=2.2,<3.0",
  "scipy>=1.16,<2.0",                   # Map similarity metrics and sat2graph processing

  # Geospatial & Coordinate Systems
  "geopandas>=1.1,<2.0",                # Geospatial data operations
  "shapely>=2.1,<3.0",                  # Geometry operations (Point, LineString)
  "utm>=0.8,<1.0",                      # To convert between UTM and latlon coordinates
  "rtree>=1.4,<2.0",                    # Indexing nodes subgraph extraction by bounding box

  # Graph & Network Operations
  "networkx>=3.5,<4.0",                 # Graph manipulation
  "osmnx>=2.0,<3.0",                    # Graph manipulation + OSM data retrieval

  # Data Analysis & Statistics
  "pandas>=2.3,<3.0",
  "scikit-learn>=1.7,<2.0",             # Enforce scikit so pandas works

  # Visualization & Plotting
  "matplotlib>=3.10,<4.0",
  "seaborn>=0.13,<1.0",
  "pyQt6>=6.9,<7.0",                    # Necessary for plotting on your new laptop

  # Image Processing & Deep Learning
  "pillow>=11.3,<12.0",                 # Image extraction
  "opencv-python>=4.12,<5.0",           # cv2
  "tf-nightly-cpu",                     # tf

  # Network & I/O
  "requests>=2.32,<3.0",                # gmaps-image dependency for API requests

  # Research-Specific Algorithms
  "partial-curve-matching @ git+https://github.com/jvtubergen/partial-curve-matching-rs.git",
]

[project.optional-dependencies]
dev = [
  "py-spy>=0.4,<1.0", # Performance profiling tool
  "debugpy>=1.8,<2.0" # To connect with IDE debugger
]

[project.urls]
Documentation = "https://github.com/jvtubergen/map-fusion#readme"
Issues = "https://github.com/jvtubergen/map-fusion/issues"
Source = "https://github.com/jvtubergen/map-fusion"

[tool.hatch.version]
path = "src/map_fusion/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true # Necessary to directly link to github releases.

[tool.hatch.envs.default]
extra-dependencies = [
  "pytest>=8.0.0",
  "mypy>=1.0.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests} && mypy --install-types --non-interactive {args:src/map_fusion}"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
  "types-networkx",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/map_fusion}"
check-gps = "mypy --follow-imports=silent --strict src/map_fusion/data/gps.py"

[tool.coverage.run]
source_pkgs = ["map_fusion"]
branch = true
parallel = true
omit = [
  "src/map_fusion/__about__.py",
]

[tool.coverage.paths]
map_fusion = ["src/map_fusion"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true
